updated file, etc

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ report-output.tex
 mental-health-diversion-template.pdf
 _extensions/neurotyp/typst-template.typ.bk
 _extensions/neurotyp/typst-template.pdf
+NEPSY-II_GeneralBattery.xlsx
