trying to sync w regular neurotyp

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,20 +1,21 @@
 project:
   type: default
-  # execute-dir: file
+  execute-dir: file
   render:
     - Biggie.qmd
+    # - {{< var patient >}}.qmd
 
 format:
-  neurotyp-pediatric-typst:
+  neurotyp-typst:
     keep-typ: true
     keep-md: true
     papersize: "us-letter"
     bodyfont: "ScholaX"
-    sansfont: "ScholaX"
+    sansfont: "Work Sans"
     fontsize: 12pt
     number-sections: false
     citeproc: false
-    csl: src/bib/apa
+    csl: /src/bib/apa
 
 execute:
   warning: false
@@ -35,4 +36,4 @@ fig-format: svg
 fig-dpi: 270
 df-print: kable
 reference-location: document
-bibliography: src/bib/refs.bib
+bibliography: /src/bib/refs.bib
