--- a/_variables.yml
+++ b/_variables.yml
@@ -8,8 +8,8 @@ dob: 1991-01-01
 doe1: ""
 doe2: ""
 doe3: ""
-sex: ""
-sex_cap: ""
+sex: NA
+sex_cap: NA
 age: ""
 education: ""
 handedness: ""
@@ -17,9 +17,9 @@ referral: ""
 observer: ""
 observer_relation: ""
 attorney: ""
-mr_mrs:
-he_she:
-he_she_cap:
+mr_mrs: ""
+he_she: NA
+he_she_cap: NA
 his_her:
 his_her_cap:
 him_her:
