CORE UPDATES, trying to make useable

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,11 +2,10 @@ project:
   type: default
   execute-dir: file
   render:
-    - Biggie.qmd
-    # - {{< var patient >}}.qmd
+    - {{< var patient >}}.qmd
 
 format:
-  neurotyp-typst:
+  neurotyp-pediatric-typst:
     keep-typ: true
     keep-md: true
     papersize: "us-letter"
