--- a/_extensions/neurotyp-pediatric/_extension.yml
+++ b/_extensions/neurotyp-pediatric/_extension.yml
@@ -1,5 +1,5 @@
-title: Neurotyp-Pediatric Neuropsychological Report Template for Typst in Quarto
-author: Joey Trampush
+title: Neurotyp-Pediatric Neuropsychological Report Template using Typst in Quarto
+author: Joey Trampush, PhD
 version: 0.1.0
 quarto-required: ">=1.4.0"
 contributes:
