--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ cache/
 file_names.sh
 fillable_pdf.R
 fillable_pdf2.R
-index_scores.xlsx
+# index_scores.xlsx
 jwt_sig.png
 local_data
 mental-health-diversion-template.pdf
