--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ validity.csv
 NEPSY-II_GeneralBattery.xlsx
 src/rmd/cars2_hf.xlsx
 src/rmd/cars2.xlsx
+_extensions/neurotyp-pediatric/typst-template.pdf
+prompt.txt
+test_scale_descriptions.md
+gpt_neurocog_prompts.qmd
