--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,10 +2,10 @@ project:
   type: default
   execute-dir: file
   render:
-    - {{< var patient >}}.qmd
+    - Biggie.qmd
 
 format:
-  neurotyp-pediatric-typst:
+  neurotyp-typst:
     keep-typ: true
     keep-md: true
     papersize: "us-letter"
@@ -14,7 +14,7 @@ format:
     fontsize: 12pt
     number-sections: false
     citeproc: false
-    csl: /src/bib/apa
+    csl: /src/bib/apa.csl
 
 execute:
   warning: false
