--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
     - Biggie.qmd
 
 format:
-  neurotyp-typst:
+  neurotyp-pediatric-typst:
     keep-typ: true
     keep-md: true
     papersize: "us-letter"
