updates to nt peds

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ _extensions/neurotyp-pediatric/typst-template.pdf
 prompt.txt
 test_scale_descriptions.md
 gpt_neurocog_prompts.qmd
+neurotyp-pediatric.ipynb
