--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ file_names.sh
 fillable_pdf.R
 fillable_pdf2.R
 # index_scores.xlsx
-jwt_sig.png
+# jwt_sig.png
 local_data
 mental-health-diversion-template.pdf
 neurobehav.csv
