Update project structure and enhance CEFI processing
- Add Google Drive ignore patterns to .gitignore
- Expand test administration list with new assessments
- Update Typst template with improved patient handling and formatting
- Refactor CEFI data processing with enhanced result generation
- Add new include domains file and audio data directory
- Remove outdated neuropsych lookup table
- Add Claude neurocognitive summary prompt script

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,14 @@ Thumbs.db
 .vscode/
 .prompts/
 *.
+
+# google drive
+Icon
+/Icon/
+.github/Icon
+*Icon*
+Icon?
+.tmp.driveupload/
+template_files/Icon
+template_files/Icon?
+template_files/Icon
