--- a/_variables.yml
+++ b/_variables.yml
@@ -1,22 +1,23 @@
 version: 0.1.0
 
 # VARIABLES
-patient: Biggie
+patient: "Biggie"
 first_name: Biggie
 last_name: Smalls
-dob: 1991-01-01
-doe1: 2024-01-01
-doe2: 2024-02-01
-doe3: 2024-03-01
+dob: "1977-01-01"
+doe: "2024-09-08"
+doe2: "2024-09-11"
+doe3: "2024-09-15"
+date_of_report: "2025-01-20"
 sex: male
 sex_cap: Male
-age: 18
-education: 14 years
+age: 36
+education: 12
 handedness: right
 referral: Dr. Dre
 observer: Tupac Shakur
-observer_relation: Complicated
-attorney: Johnny Cochrane
+observer_relation: friend
+attorney: Johnny Cochran
 mr_mrs: Mr.
 he_she: he
 he_she_cap: He
@@ -24,11 +25,6 @@ his_her: his
 his_her_cap: His
 him_her: him
 him_her_cap: Him
-dx1: attention-deficit/hyperactivity disorder (ADHD)
+dx1: ADHD
 dx2: anxiety
 dx3: depression
-dsm5_dx1: 314.01 (F90.2) Attention-Deficit/Hyperactivity Disorder (ADHD), Combined Presentation
-dsm5_dx2: Anxiety
-dsm5_dx3: Depression
-dsm5_dx4: LD
-dsm5_dx5: Family factors etc
